# mintickt_backend

./: .gitignore  README.md  implementacion mintick.txt
MarketPlace/: Cargo.toml
MarketPlace/src/: external.rs  lib.rs  nft_callbacks.rs
MintickNft/: Cargo.toml
MintickNft/src/: event.rs  lib.rs
